--- a/Desafio_Kaua/appsettings.Development.json
+++ b/Desafio_Kaua/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "TestConnection": "Server=aws-0-us-east-2.pooler.supabase.com; Port=6543; Database=postgres; User Id=postgres.ogzevpdtjwfwybrzwguw; Password=xukx59F11Ls,;",
+    "ProductionConnection": "Host=no-db-dev-101.negocieonline.com.br;Database=db_selecao_imdb;Username=usr_teste;Password=T!xE+(B+PJ6{WmS"
   }
 }
